--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,5 +1,9 @@
 @import "./var.less";
-
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 html {
   color: @words;
   font-family: "-apple-system", "BlinkMacSystemFont", "Roboto", "Helvetica Neue",
